--- a/ticketGol/src/main/webapp/Jogos/css/Jogos.css
+++ b/ticketGol/src/main/webapp/Jogos/css/Jogos.css
@@ -1,144 +1,77 @@
-/* Definições gerais */
-/* Define configurações iniciais para todos os elementos */
+/* Estilos para todos os elementos */
 * {
   margin: 0;
-  /* Define a margem como 0 */
   padding: 0;
-  /* Define o preenchimento como 0 */
   box-sizing: border-box;
-  /* Define o modelo de caixa como border-box */
-  font-family: monospace;
-  /* Define a fonte como monoespaçada */
+  font-family: 'Roboto Mono', monospace;
 }
 
 html {
   scroll-behavior: smooth;
-  /* Adiciona um efeito de rolagem suave para a página */
 }
 
 /* Estilos para o cabeçalho */
 header {
   width: 100%;
-  /* Ajusta a largura para compensar o overflow horizontal */
-  margin-top: -12.5%;
-  /* Move o cabeçalho para cima para alinhar visualmente */
   display: flex;
-  /* Usa um layout flexível para o cabeçalho */
   align-items: center;
-  /* Alinha os itens verticalmente */
   justify-content: space-between;
-  /* Distribui o espaço disponível entre os elementos */
-  padding: 10px 0;
-  /* Adiciona preenchimento superior e inferior */
-  position: absolute;
-  /* Define a posição como absoluta */
+  padding: 10px 20px;
   background-color: #b5121b;
-  /* Define a cor de fundo como vermelho */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
 
-/* Estilos para o corpo da página */
-body {
-  color: white;
-  /* Define a cor do texto como branco */
-  background: url(/teste/img/img-fundoTeste6.jpeg) no-repeat;
-  /* Define a imagem de fundo */
-  background-size: cover;
-  /* Faz a imagem de fundo cobrir todo o elemento */
-  background-position: center;
-  /* Centraliza a imagem de fundo */
-}
-
-/* Estilos para a logo */
 .logo {
-  width: 205px;
-  /* Define a largura da logo */
+  width: 150px;
   cursor: pointer;
-  /* Define o cursor como ponteiro */
-  margin-left: 65%;
-  /* Move a logo para a direita */
 }
 
 .logo:hover {
   transform: scale(0.93);
-  /* Aplica uma escala de redução no hover */
   transition: all 0.5s;
-  /* Adiciona uma transição suave */
 }
 
-/* Estilos para o título do menu */
-.titulo-menu {
-  margin-left: 2px;
-  /* Define a margem à esquerda */
-  font-size: 25px;
-  /* Define o tamanho da fonte */
-  cursor: pointer;
-  /* Define o cursor como ponteiro */
-  font-weight: bolder;
-  /* Define a espessura da fonte como negrito */
-}
-
-.titulo-menu:hover {
-  transform: scale(1.05);
-  /* Aplica uma escala de aumento no hover */
-  transition: all 0.5s;
-  /* Adiciona uma transição suave */
-}
-
-/* Estilos para a lista de links no cabeçalho */
 header ul {
   list-style: none;
-  /* Remove os estilos padrão da lista */
-  width: 100%;
-  /* Define a largura como 100% */
-  text-align: right;
-  /* Alinha o texto à direita */
-  margin-right: 19%;
-  /* Adiciona uma margem à direita */
+  display: flex;
+  gap: 20px;
 }
 
 header ul li {
   display: inline-block;
-  /* Exibe os itens da lista em linha */
-  margin: 10px 35px;
-  /* Adiciona margens aos itens da lista */
 }
 
 header ul li a {
-  font-size: 19px;
-  /* Define o tamanho da fonte */
+  font-size: 16px;
   color: white;
-  /* Define a cor do texto como branco */
   text-decoration: none;
-  /* Remove a decoração do texto */
-  font-weight: bolder;
-  /* Define a espessura da fonte como negrito */
+  font-weight: bold;
 }
 
 header ul li:hover {
   transform: scale(0.93);
-  /* Aplica uma escala de redução no hover */
   transition: all 0.5s;
-  /* Adiciona uma transição suave */
 }
 
-/* Estilos para o botão */
+
+/* Estilos para o botão de login */
 .btn {
   display: flex;
   align-items: center;
-  padding: 5px 8px;
-  border-color: white;
-  outline: 0;
+  padding: 5px 15px;
+  border: 2px solid white;
   border-radius: 15px;
   background: none;
   color: white;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 550;
   cursor: pointer;
-  margin-right: 5%;
 }
 
 .btn:hover {
-  /* Efeito de escala no hover */
   transform: scale(0.95);
   transition: all 0.4s;
 }
@@ -148,13 +81,9 @@ header ul li:hover {
   color: white;
 }
 
-.btn a:hover {
-  transform: none;
-}
-
 .btn img {
-  width: 25px;
-  margin-right: 10px;
+  width: 20px;
+  margin-right: 8px;
 }
 
 /* Estilos para os cards */
