--- a/ticketGol/src/main/webapp/Compra/css/Compra.css
+++ b/ticketGol/src/main/webapp/Compra/css/Compra.css
@@ -30,15 +30,14 @@ body {
     background: transparent;
     backdrop-filter: blur(3px) grayscale(0.2) brightness(0.4);
     padding: 20px;
-    border: 3px solid #b5121a;
+    border: 3px solid white;
     border-radius: 20px;
-    box-shadow: 0px 0px 30px 1px rgb(168, 3, 3);
+    box-shadow: 0px 0px 30px 1px white;
 }
 
 h1 {
     text-align: center;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    margin-bottom: 30px;
     font-size: 25px;
 }
 
@@ -57,9 +56,9 @@ textarea {
     border: none;
     border-radius: 10px;
     background: transparent;
-    box-shadow: 0 0 12px 0 #B5121B;
+    box-shadow: 0 0 12px 0 white;
     color: white;
-    border: 2px solid #b5121a;
+    border: 2px solid white;
     outline: none;
 }
 
@@ -68,17 +67,17 @@ select {
     padding: 7px 0 8px 5px;
     border: none;
     border-radius: 10px;
-    box-shadow: 0 0 12px 0 #B5121B;
+    box-shadow: 0 0 12px 0 white;
     color: white;
-    border: 2px solid #b5121a;
+    border: 2px solid white;
     outline: none;
     background: transparent;
     margin-bottom: 8px;
 }
 
 option {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: rgb(100, 100, 100);
 }
 
 i {
@@ -106,11 +105,11 @@ button {
     display: block;
     width: 50%;
     padding: 10px;
-    background: linear-gradient(to right, #b5121a, #b5121ab0);
-    color: #fff;
-    border: 2px solid #b5121a;
+    background: linear-gradient(to right, #d6d6d6, white);
+    color: rgb(100, 100, 100);
+    border: 2px solid white;
     border-radius: 10px;
-    box-shadow: 0 0 10px 0 #B5121B;
+    box-shadow: 0 0 10px 0 white;
     cursor: pointer;
     font-size: 20px;
     margin-left: 25%;
@@ -119,7 +118,7 @@ button {
 }
 
 button:hover {
-    transform: scale(0.95);
+    transform: scale(0.98);
     transition: all 0.3s;
 }
 
