--- a/ticketGol/src/main/webapp/Jogos/css/Jogos.css
+++ b/ticketGol/src/main/webapp/Jogos/css/Jogos.css
@@ -10,23 +10,33 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  color: white;
+  background: url(/teste/img/img-fundoTeste6.jpeg) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 /* Estilos para o cabeçalho */
 header {
-  width: 100%;
+  width: 101%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
-  background-color: #b5121b;
+  border: 3px solid white;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1000;
+  margin-top: -2.6px;
+  margin-left: -3px;
 }
 
 .logo {
-  width: 150px;
+  width: 200px;
   cursor: pointer;
+  margin-left: 8%;
 }
 
 .logo:hover {
@@ -37,7 +47,7 @@ header {
 header ul {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 130px;
 }
 
 header ul li {
@@ -45,7 +55,7 @@ header ul li {
 }
 
 header ul li a {
-  font-size: 16px;
+  font-size: 19px;
   color: white;
   text-decoration: none;
   font-weight: bold;
@@ -66,9 +76,10 @@ header ul li:hover {
   border-radius: 15px;
   background: none;
   color: white;
-  font-size: 16px;
+  font-size: 19px;
   font-weight: 550;
   cursor: pointer;
+  margin-right: 1%;
 }
 
 .btn:hover {
@@ -79,11 +90,46 @@ header ul li:hover {
 .btn a {
   text-decoration: none;
   color: white;
+  display: flex;
+  align-items: center;
 }
 
 .btn img {
-  width: 20px;
+  width: 25px;
   margin-right: 8px;
+  display: flex;
+  align-items: center;
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+  }
+
+  .logo {
+    width: 200px;
+    margin-bottom: 10px;
+  }
+
+  header ul {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    width: 100%;
+  }
+
+  header ul li {
+    display: block;
+  }
+
+  .btn {
+    width: 100%;
+    justify-content: center;
+    margin-top: 10px;
+  }
 }
 
 /* Estilos para os cards */
@@ -348,311 +394,4 @@ header ul li:hover {
   /* Adiciona uma margem à direita */
   margin-bottom: -2px;
   /* Move a imagem para baixo */
-}
-
-/* Estilos para o rodapé */
-footer {
-  bottom: 0;
-  /* Define a posição inferior como 0 */
-}
-
-@media(max-height:800px) {
-  footer {
-    position: static;
-    /* Define a posição como estática */
-  }
-
-  header {
-    padding-top: 40px;
-    /* Adiciona preenchimento superior */
-  }
-}
-
-/* Estilos para o rodapé */
-.footer-distributed {
-  background-color: black;
-  /* Define a cor de fundo como preto */
-  box-sizing: border-box;
-  /* Define o modelo de caixa como border-box */
-  width: 100%;
-  /* Define a largura como 100% */
-  text-align: left;
-  /* Alinha o texto à esquerda */
-  font: bold 16px sans-serif;
-  /* Define a fonte */
-  padding: 50px 50px 60px 50px;
-  /* Adiciona preenchimento */
-  margin-top: 80px;
-  /* Adiciona uma margem superior */
-}
-
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right {
-  display: inline-block;
-  /* Exibe os elementos em linha */
-  vertical-align: top;
-  /* Alinha os elementos ao topo */
-}
-
-/* Estilos para o rodapé - à esquerda */
-.footer-distributed .footer-left {
-  width: 30%;
-  /* Define a largura como 30% */
-}
-
-.footer-distributed h3 {
-  color: white;
-  /* Define a cor do texto como branco */
-  font: normal 36px arial;
-  /* Define a fonte */
-  margin: 0;
-  /* Define a margem como 0 */
-}
-
-.footer-distributed h3 span {
-  margin-left: 1.5px;
-  /* Adiciona uma margem à esquerda */
-  color: #b5121b;
-  /* Define a cor do texto como vermelho */
-}
-
-/* Estilos para os links no rodapé */
-.footer-distributed .footer-links {
-  color: white;
-  /* Define a cor do texto como branco */
-  margin: 20px 0 12px;
-  /* Adiciona margens */
-}
-
-.footer-distributed .footer-links a {
-  display: inline-block;
-  /* Exibe os elementos em linha */
-  line-height: 1.8;
-  /* Define a altura da linha */
-  text-decoration: none;
-  /* Remove a decoração do texto */
-  color: inherit;
-  /* Herda a cor do texto */
-}
-
-.footer-distributed .footer-company-name {
-  color: #8f9296;
-  /* Define a cor do texto como cinza */
-  font-size: 14px;
-  /* Define o tamanho da fonte */
-  font-weight: normal;
-  /* Define a espessura da fonte como normal */
-  margin: 0;
-  /* Define a margem como 0 */
-}
-
-/* Estilos para o rodapé - ao centro */
-.footer-distributed .footer-center {
-  width: 35%;
-  /* Define a largura como 35% */
-}
-
-.footer-distributed .footer-center i {
-  background-color: transparent;
-  color: #ffffff;
-  font-size: 25px;
-  width: 38px;
-  height: 38px;
-  border: none;
-  outline: 2px solid white;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 42px;
-  margin: 10px 15px;
-  vertical-align: middle;
-}
-
-.footer-distributed .footer-center i:hover {
-  transition: all 0.3s;
-  /* Adiciona uma transição suave */
-}
-
-.footer-distributed .footer-center i.fa-envelope {
-  font-size: 17px;
-  line-height: 38px;
-}
-
-.footer-distributed .footer-center i.fa-map-marker {
-  line-height: 38px;
-}
-
-
-.footer-distributed .footer-center i.fa-map-marker:hover {
-  transform: scale(1.05);
-  /* Aplica uma escala de aumento no hover */
-  transition: all 0.3s;
-  box-shadow: 0 0 20px white;
-}
-
-.footer-distributed .footer-center i.fa-phone:hover {
-  transform: scale(1.05);
-  /* Aplica uma escala de aumento no hover */
-  transition: all 0.3s;
-  box-shadow: 0 0 20px white;
-}
-
-.footer-distributed .footer-center i.fa-envelope:hover {
-  transform: scale(1.05);
-  /* Aplica uma escala de aumento no hover */
-  transition: all 0.3s;
-  box-shadow: 0 0 20px white;
-}
-
-.footer-distributed .footer-center p {
-  display: inline-block;
-  /* Exibe os elementos em linha */
-  color: white;
-  /* Define a cor do texto como branco */
-  vertical-align: middle;
-  /* Alinha verticalmente */
-  margin: 0;
-  /* Define a margem como 0 */
-}
-
-.footer-distributed .footer-center p span {
-  display: block;
-  /* Define os elementos como blocos */
-  font-weight: normal;
-  /* Define a espessura da fonte como normal */
-  font-size: 14px;
-  /* Define o tamanho da fonte */
-  line-height: 2;
-  /* Define a altura da linha */
-}
-
-.footer-distributed .footer-center p a {
-  color: white;
-  /* Define a cor do texto como branco */
-  text-decoration: none;
-  /* Remove a decoração do texto */
-}
-
-/* Estilos para o rodapé - à direita */
-.footer-distributed .footer-right {
-  width: 30%;
-  /* Define a largura como 30% */
-}
-
-.footer-distributed .footer-company-about {
-  line-height: 20px;
-  /* Define a altura da linha */
-  color: #92999f;
-  /* Define a cor do texto como cinza */
-  font-size: 13px;
-  /* Define o tamanho da fonte */
-  font-weight: normal;
-  /* Define a espessura da fonte como normal */
-  margin: 0;
-  /* Define a margem como 0 */
-}
-
-.footer-distributed .footer-company-about span {
-  display: block;
-  /* Define os elementos como blocos */
-  color: white;
-  /* Define a cor do texto como branco */
-  font-size: 18px;
-  /* Define o tamanho da fonte */
-  font-weight: bold;
-  /* Define a espessura da fonte como negrito */
-  margin-bottom: 20px;
-  /* Adiciona uma margem inferior */
-}
-
-:root {
-  --background: #060D23;
-  /* Define uma variável CSS para a cor de fundo */
-  --facebook: #0A66C2;
-  /* Define uma variável CSS para a cor do Facebook */
-  --x: #000;
-  /* Define uma variável CSS para a cor preta */
-  --white: #FFF
-    /* Define uma variável CSS para a cor branca */
-}
-
-.btns-midias-sociais {
-  margin-top: 20px;
-  /* Adiciona uma margem superior */
-  display: flex;
-  /* Usa um layout flexível para os botões de mídia social */
-  flex-wrap: wrap;
-  /* Permite a quebra de linha */
-  gap: 1rem;
-  /* Define o espaço entre os botões */
-}
-
-.btn-midia-social {
-  width: 3rem;
-  /* Define a largura */
-  height: 3rem;
-  /* Define a altura */
-  border: none;
-  /* Remove a borda */
-  background-color: transparent;
-  /* Define o plano de fundo como transparente */
-  border-radius: 50%;
-  /* Adiciona bordas arredondadas */
-  outline: 2px solid white;
-  /* Adiciona um contorno branco */
-  cursor: pointer;
-  /* Define o cursor como ponteiro */
-  transition: all 0.3s;
-  /* Adiciona uma transição suave */
-  display: grid;
-  /* Usa um layout de grade */
-  place-items: center;
-  /* Alinha os itens no centro */
-}
-
-.btn-midia-social:hover {
-  outline-offset: 3px;
-  /* Define o deslocamento do contorno */
-  transition: all 0.3s;
-  /* Adiciona uma transição suave */
-}
-
-img {
-  width: 15px;
-  /* Define a largura da imagem */
-}
-
-.btn-midia-social img {
-  transition: all 0.2s;
-  /* Adiciona uma transição suave */
-}
-
-.btn-midia-social:hover img {
-  transform: scale(1.15);
-  /* Aplica uma escala de aumento no hover */
-}
-
-.btn-midia-social:hover:nth-child(1) {
-  background-color: var(--x);
-  /* Define a cor de fundo */
-}
-
-.btn-midia-social:hover:nth-child(2) {
-  background-color: var(--x);
-  /* Define a cor de fundo */
-}
-
-.btn-midia-social:hover:nth-child(3) {
-  background-color: var(--x);
-  /* Define a cor de fundo */
-}
-
-/* Media query para telas menores */
-@media (max-width: 880px) {
-
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right {
-    /* Adicione estilos aqui para telas menores */
-  }
 }
