--- a/ticketGol/src/main/webapp/Jogos/css/JogosCadastro.css
+++ b/ticketGol/src/main/webapp/Jogos/css/JogosCadastro.css
@@ -18,16 +18,16 @@ body {
 }
 
 .container {
-    width: 30%;
+    width: 31%;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
-    border: 3px solid #b5121a;
+    border: 3px solid white;
     border-radius: 15px;
-    box-shadow: 0px 0px 30px 1px rgb(168, 3, 3);
+    box-shadow: 0px 0px 12px white;
     color: white;
-    backdrop-filter: blur(3px) grayscale(0.1) brightness(0.65);
+    backdrop-filter: blur(3px) grayscale(0.1) brightness(0.4);
 }
 
 .field {
@@ -43,30 +43,36 @@ h1 {
 
 label {
     margin: 3px;
+    margin-top: 5px;
     font-size: 17px;
 }
 
 input {
     background: transparent;
     color: white;
-    box-shadow: 0 0 12px 0 #B5121B;
-    border: 2px solid #b5121a;
-    border-radius: 10px;
-    margin: 10px;
-    width: 120%;
-    padding: 5px;
+    box-shadow: 0 0 8px 0 white;
+    border: 2px solid white;
+    border-radius: 20px;
+    margin: 12px;
+    width: 150%;
+    padding: 7%;
 }
 
 button {
     background: transparent;
-    color: white;
-    border: 2px solid #b5121a;
-    background: linear-gradient(to right, #b5121a, #b5121ab0);
+    color: rgb(100, 100, 100);
+    border: 2px solid white;
+    background: linear-gradient(to right, #d6d6d6, white);
     border-radius: 10px;
-    box-shadow: 0 0 10px 0 #B5121B;
+    box-shadow: 0 0 10px 0 white;
     margin: 10px;
     margin-top: 40px;
     margin-bottom: 25px;
     font-size: 25px;
     cursor: pointer;
+}
+
+button:hover {
+    transform: scale(0.98);
+    transition: all 0.3s;
 }
