--- a/ticketGol/src/main/webapp/Login/css/Login.css
+++ b/ticketGol/src/main/webapp/Login/css/Login.css
@@ -22,14 +22,14 @@ body {
     background: transparent;
     padding: 6px;
     width: 370px;
-    height: 500px;
+    height: 525px;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     overflow: hidden;
-    border: 3px solid #b5121a;
-    box-shadow: 0px 0px 30px 1px rgb(168, 3, 3);
+    border: 3px solid white;
+    box-shadow: 0px 0px 15px 1px white;
     border-radius: 15px;
     backdrop-filter: blur(3px) grayscale(0.2) brightness(0.55);
 }
@@ -47,7 +47,7 @@ form {
     margin-top: 40px;
     position: relative;
     border-radius: 30px;
-    box-shadow: 0 0 7px 0 #B5121B;
+    box-shadow: 0 0 7px 0 white;
 }
 
 .buttonsForm button {
@@ -56,14 +56,15 @@ form {
     border: none;
     position: relative;
     padding: 10px 21px;
-    color: white;
+    color: rgb(100, 100, 100);
+    font-weight: bold;
 }
 
 .btnColor {
     position: absolute;
     width: 107px;
     height: 100%;
-    background: linear-gradient(to right, #b5121a, #b5121ab0);
+    background: linear-gradient(to right, #d6d6d6, white);
     border-radius: 30px;
     transition: .3s;
 }
@@ -79,14 +80,15 @@ form {
 }
 
 #signin .btn-login {
-    color: white;
-    font-size: 17px;
-    background: linear-gradient(to right, #b5121a, #b5121ab0);
+    color: rgb(100, 100, 100);
+    font-weight: bold;
+    font-size: 18px;
+    background: linear-gradient(to right, #d6d6d6, white);
     border-radius: 20px;
     width: 50%;
     height: 10%;
-    border: 2px solid #b5121a;
-    box-shadow: 0 0 10px 0 #B5121B;
+    border: 2px solid white;
+    box-shadow: 0 0 10px 0 white;
     cursor: pointer;
     margin-left: 24%;
 }
@@ -97,21 +99,22 @@ form {
 }
 
 #signup .btn-cadastro {
-    color: white;
-    font-size: 17px;
-    background: linear-gradient(to right, #b5121a, #b5121ab0);
+    color: rgb(100, 100, 100);
+    font-weight: bold;
+    font-size: 18px;
+    background: linear-gradient(to right, #d6d6d6, white);
     border-radius: 20px;
     width: 50%;
     height: 10%;
-    border: 2px solid #b5121a;
-    box-shadow: 0 0 10px 0 #B5121B;
+    border: 2px solid white;
+    box-shadow: 0 0 10px 0 white;
     cursor: pointer;
     margin-left: 25%;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .btnCadastro {
-    color: white;
+    color: black;
     font-size: 15px;
     margin-left: 10px;
 }
@@ -125,9 +128,9 @@ input[type="password"] {
     outline: none;
     width: 100%;
     background: transparent;
-    box-shadow: 0 0 12px 0 #B5121B;
+    box-shadow: 0 0 8px 0 white;
     color: white;
-    border: 2px solid #b5121a;
+    border: 2px solid white;
 }
 
 .btn-login {
@@ -185,13 +188,13 @@ i {
 }
 
 .iCalendar {
-    top: 49%;
+    top: 48.9%;
     left: 1%;
     font-size: 17px;
 }
 
 .iLock {
-    top: 63.7%;
+    top: 63.9%;
     left: 1%;
     font-size: 17px;
 }
